tf-files/main.tf
resource "aws_lb_target_group" "app-lb-tg" {
    name        = "phonebook-lb-tg"
    port        = 80
    protocol    = "HTTP"
    vpc_id      = data.aws_vpc.selected.id
    target_type = "instance"

    health_check {
        healthy_threshold   = 2
        unhealthy_threshold = 3
    }
  
}

resource "aws_lb" "phonebook-lb" {
    name               = "phonebook-lb"
    ip_address_type    = "ipv4"
    internal           = false
    load_balancer_type = "application"
    security_groups    = [aws_security_group.alb-sg.id]
    subnets            = data.aws_subnets.selected.ids
    
}

resource "aws_lb_listener" "app-listener" {
    load_balancer_arn = aws_lb.phonebook-lb.arn
    port              = 80
    protocol          = "HTTP"
    default_action {
        type             = "forward"
        target_group_arn = aws_lb_target_group.app-lb-tg.arn
    }
}

resource "aws_launch_template" "asg-lt" {
    name                   = "phonebook-lt"
    image_id               = data.aws_ami.al2023.id
    instance_type          = var.instance_type
    key_name               = var.key_name
    vpc_security_group_ids = [aws_security_group.server-sg.id]
    user_data              = base64encode(templatefile("userdata.sh", { 
        db-endpoint = aws_db_instance.db-server.address, 
        db-user = var.db-user,
        db-password = var.db-password,
        db-name = var.db-name,
        user-data-git-token = var.git-token, 
        user-data-git-name = var.git-name 
    }))

    tag_specifications {
        resource_type = "instance"
        tags = {
            Name = "Web Server of Phonebook App"
        }
    }
}

resource "aws_autoscaling_group" "app-sg" {
    desired_capacity     = 1
    max_size             = 3
    min_size             = 1
    name                 = "phonebook-asg"
    health_check_grace_period = 300
    health_check_type         = "ELB"
    target_group_arns    = [aws_lb_target_group.app-lb-tg.arn]
    vpc_zone_identifier  = aws_lb.phonebook-lb.subnets
    launch_template {
        id      = aws_launch_template.asg-lt.id
        version = aws_launch_template.asg-lt.latest_version
    }
    
}

resource "aws_db_instance" "db-server" {
    instance_class              = "db.t3.micro"
    allocated_storage           = 20
    vpc_security_group_ids      = [aws_security_group.db-sg.id]
    allow_major_version_upgrade = false
    auto_minor_version_upgrade  = true
    backup_retention_period     = 0
    identifier                  = "phonebook-app-db"
    db_name                     = var.db-name
    engine                      = "mysql"
    engine_version              = "8.0.37"
    username                    = "${var.db-user}"
    password                    = "${var.db-password}"
    monitoring_interval         = 0
    multi_az                    = false
    port                        = 3306
    publicly_accessible         = false
    skip_final_snapshot         = true
  
}

resource "aws_route53_record" "phonebook" {
  zone_id = data.aws_route53_zone.selected.zone_id
  name    = "phonebook.${var.hosted-zone}"
  type    = "A"

  alias {
    name                   = aws_lb.phonebook-lb.dns_name
    zone_id                = aws_lb.phonebook-lb.zone_id
    evaluate_target_health = true
  }
}
